# python_prtree

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  :w  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FLOAT32_PRECISION_ANALYSIS.md  LICENSE  MAKEFILE_USAGE.md  MANIFEST.in  Makefile  README.md  init_develop.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_profile.sh  run_test.sh  setup.py  test.sh  test_different_sources.py  test_false_negative_found.py  test_float32_extreme.py  test_float32_overlap_issue.py  test_float32_refined.py  test_rounding_direction.py  tmptest.py  version.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cibuildwheel.yml  cibuildwheel_mac.yml  cibuildwheel_test.yml
PRTree/: __init__.py
benchmarks/: benchmark_construction.cpp  benchmark_parallel.cpp  benchmark_query.cpp  benchmark_utils.h  workloads.h
benchmarks/cpp/: stress_test_concurrent.cpp
benchmarks/python/: README.md
cpp/: function_ref.h  gzip.h  main.cc  parallel.h  prtree.h  small_vector.h
docs/: ARCHITECTURE.md  BUG_REPORT.md  DEVELOPMENT.md  MIGRATION.md  README.md  SEGFAULT_SAFETY.md  TEST_COVERAGE_SUMMARY.md  TEST_STRATEGY.md  TEST_VALIDATION_REPORT.md  experiment.ipynb  run_profile.py
docs/.ipynb_checkpoints/: experiment-checkpoint.ipynb
docs/baseline/: BASELINE_SUMMARY.md  BASELINE_SUMMARY_COMPLETED.md  README.md  system_info.txt
docs/examples/: experiment.ipynb
include/: README.md
include/prtree/core/: prtree.h
include/prtree/core/detail/: README.md  bounding_box.h  data_type.h  nodes.h  pseudo_tree.h  types.h
include/prtree/utils/: parallel.h  small_vector.h
mapmatching/: math.py  myadd.py  ox.py
scripts/: analyze_baseline.py
src/: a.cpp  a.out  add.h  d.txt  main.cc  main.cpp  mm.h  prtree.h
src/cpp/: README.md
src/cpp/bindings/: python_bindings.cc
src/python_prtree/: README.md  __init__.py  core.py  libmimalloc.so.1.6  py.typed
test/: test_PRTree.py  tmptest.py
tests/: README.md  _ci_debug_import.py  _ci_test_runner.py  conftest.py  test_PRTree.py  test_math.py  test_user_scenarios.py  tmptest.py
tests/e2e/: __init__.py  test_readme_examples.py  test_regression.py  test_user_workflows.py
tests/integration/: __init__.py  test_erase_query_workflow.py  test_insert_query_workflow.py  test_mixed_operations.py  test_persistence_query_workflow.py  test_rebuild_query_workflow.py
tests/unit/: __init__.py  test_batch_query.py  test_comprehensive_safety.py  test_concurrency.py  test_construction.py  test_crash_isolation.py  test_erase.py  test_insert.py  test_intersections.py  test_memory_safety.py  test_object_handling.py  test_parallel_configuration.py  test_persistence.py  test_precision.py  test_properties.py  test_query.py  test_rebuild.py  test_segfault_safety.py
third/cereal-1.3.0/: CMakeLists.txt
third/zlib/: CMakeLists.txt
tools/: profile.sh  profile_all_workloads.sh
